initcontainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  containers:
    - name: app-container
      image: busybox
      # command: [ "app" ]
      # args: [ "-config", "/app/config.yaml" ]
