memcpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
  - name: my-container
    image: my-image
    resources:
      limits:
        memory: "1Gi"
        cpu: "0.5"
      requests:
        memory: "512Mi"
        cpu: "0.25"`
