svcwithoutselector.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
